--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +7,8 @@
 }
 
 body {
-  /* background-color: black */
+  background-color: black;
+  color: white;
 }
 
 .container {
@@ -16,7 +19,7 @@ body {
 
 .left {
   width: 25vw;
-
+  padding: 10px;
 }
 
 .right {
@@ -30,10 +33,32 @@ body {
   /* font-weight: bold; */
 }
 
+.home {
+  padding: 10px;
+}
+
 .home ul li {
-  width: 20px;
+  width: 14px;
   list-style: none;
   display: flex;
-  gap: 10px;
-  padding: 10px;
+  gap: 15px;
+  padding-top: 14px;
+  font-weight: bold;
+}
+
+.header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.header>* {
+  padding: 20px;
+}
+
+.heading {
+  display: flex;
+  gap: 15px;
+  width: 100%;
+  padding-top: 14px;
+  font-weight: bold;
 }
