--- a/utility.css
+++ b/utility.css
@@ -26,3 +26,17 @@
 .bg-grey {
     background-color: #121212;
 }
+
+.rounded {
+
+    border-radius: 10px;
+}
+
+
+.m-2 {
+    margin: 5px
+  }
+
+.p-1 {
+    padding: 10px;
+}
