--- a/style.css
+++ b/style.css
@@ -19,17 +19,19 @@ body {
 
 .left {
   width: 25vw;
+  padding: 1px;
+}
+
+.library {
   padding: 10px;
+  height: 100vh;
+  margin: 20px;
 }
 
 .right {
-  /* height: 100vh; */
-  display: flex;
+  height: 50px;
   width: 75vw;
-  gap: 15px;
-  /* width: 14px; */
-  /* list-style: none; */
-  padding-top: 14px;
+  padding: 1px;
   /* font-weight: bold; */
 }
 
@@ -49,6 +51,9 @@ body {
 .header {
   display: flex;
   justify-content: space-between;
+  height: 50px;
+  display: flex;
+  width: 75vw;
 }
 
 .header>* {
@@ -60,5 +65,69 @@ body {
   gap: 15px;
   width: 100%;
   padding-top: 14px;
+  padding: 23px 14px;
   font-weight: bold;
+  align-items: center;
+}
+
+.heading img {
+  width: 30px;
+}
+
+.footer {
+  display: flex;
+  font-size: 10px;
+  color: gray;
+  gap: 12px;
+  position: absolute;
+  bottom: 0;
+  padding: 10px 0px;
+}
+
+.footer a{
+color: gray;
+}
+
+.spotify-playlist {
+  padding: 1px;
+  height: 100vh;
+}
+
+.cardContainer {
+  margin: 25px;
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+}
+
+.card {
+  width: 200px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #252525;
+  position: relative;
+}
+
+.card > * {
+  padding-top: 10px;
+}
+
+.card img{
+  width: 100%;
+}
+
+.play {
+  width: 28px;
+  height: 28px;
+  background-color: #1fdf64;
+  border-radius: 50%;
+  padding: 4px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  bottom: 88px;
+  right: 17px;
+  opacity: var(--a);
+  transition: all 1s ease-out;
 }
