--- a/utility.css
+++ b/utility.css
@@ -1,5 +1,5 @@
 .border{ 
-    border: 2px solid red;
+    border-radius: 10px;
 }
 
 .flex {
@@ -26,6 +26,11 @@
 .bg-grey {
     background-color: #121212;
 }
+
+.bg-darkgrey {
+    background-color: rgb(34 34 34);
+}   
+
 
 .rounded {
 
