--- a/style.css
+++ b/style.css
@@ -88,6 +88,11 @@ body {
 color: gray;
 }
 
+.right{
+  margin: 16px 0px;
+  position: relative;
+}
+
 .spotify-playlist {
   padding: 1px;
   height: 100vh;
@@ -98,6 +103,8 @@ color: gray;
   display: flex;
   gap: 10px;
   flex-wrap: wrap;
+  overflow-y: scroll;
+  max-height: 70vh;
 }
 
 .card {
@@ -128,6 +135,40 @@ color: gray;
   position: absolute;
   bottom: 88px;
   right: 17px;
-  opacity: var(--a);
+  opacity: 1;
   transition: all 1s ease-out;
+}
+
+.signupbtn {
+  background-color: black;
+  color: white;
+  font-weight: bold;
+  border: none;
+  outline: none;  
+  cursor: pointer;
+}
+
+.signupbtn:hover {
+  font-size: 17px;
+  color: white;
+}
+
+.loginbtn {
+  background-color: white;
+  color: black;
+  cursor: pointer;
+  border-radius: 23px;
+  width: 69px;
+  padding: 10px 14px;
+}
+
+.loginbtn:hover {
+  font-weight: bold;
+  width: 70px;
+  padding: 10px 14px;
+}
+
+.playbar {
+  position: relative;
+  bottom: 0;
 }
