--- a/style.css
+++ b/style.css
@@ -182,7 +182,7 @@ body {
   position: relative;
   bottom: 0;
   background-color: rgb(139, 193, 139);
-  width: 100%;
+  width: 90%;
   padding: 12px;
 }
 
@@ -190,4 +190,31 @@ body {
   display: flex;
   gap: 16px;
   justify-content: center;
+}
+
+.songList ul {
+  padding: 0px 42px;
+}
+
+.songList ul li {
+  list-style-type: decimal;
+  display: flex;
+  justify-content: space-between;
+  gap: 12px;
+  cursor: pointer;
+  padding: 12px 0;
+  border: 1px solid rgba(146, 143, 143, 0.491);
+  margin: 12px 0;
+  padding: 13px;
+  border-radius: 5px;
+}
+
+.playnow {
+  display: flex;
+}
+
+.playnow span {
+  font-size: 10px
+  padding: 12px;
+  width: 64px;
 }
