--- a/style.css
+++ b/style.css
@@ -114,7 +114,7 @@ body {
   gap: 10px;
   flex-wrap: wrap;
   overflow-y: scroll;
-  max-height: 80vh;
+  max-height: 60vh;
 }
 
 .card {
@@ -123,6 +123,13 @@ body {
   border-radius: 5px;
   background-color: #252525;
   position: relative;
+  transition: all .9s;
+}
+
+.card:hover {
+  background-color: rgb(105, 103, 103);
+  cursor: pointer;
+  --a: 1;
 }
 
 .card>* {
@@ -131,6 +138,7 @@ body {
 
 .card img {
   width: 100%;
+  object-fit: contain;
 }
 
 .play {
@@ -145,8 +153,12 @@ body {
   position: absolute;
   bottom: 88px;
   right: 17px;
-  opacity: 1;
+  opacity: 1var(--a);
   transition: all 1s ease-out;
+}
+
+.buttons>* {
+  margin: 0 12px;
 }
 
 .signupbtn {
@@ -165,25 +177,39 @@ body {
 
 .loginbtn {
   background-color: white;
+  border-radius: 21px;
   color: black;
+  padding: 10px;
+  width: 79px;
   cursor: pointer;
-  border-radius: 23px;
-  width: 69px;
-  padding: 10px 14px;
+  font-size: 16px;
 }
 
 .loginbtn:hover {
   font-weight: bold;
-  width: 70px;
-  padding: 10px 14px;
+  font-size: 17px;
 }
 
 .playbar {
-  position: relative;
+  /* position: relative;
   bottom: 0;
-  background-color: rgb(139, 193, 139);
   width: 90%;
   padding: 12px;
+  width: 70vw;
+  background-color: rgb(139, 193, 139); */
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: fixed;
+  bottom: 30px;
+  filter: invert(1);
+  background: #e2d9d9;
+  border-radius: 20px;
+  width: 90%;
+  padding: 12px;
+  width: 70vw;
+  min-height: 30px;
 }
 
 .songbuttons {
@@ -192,8 +218,14 @@ body {
   justify-content: center;
 }
 
+.songList {
+  height: 544px;
+  overflow: auto;
+  margin-bottom: 44px;
+}
+
 .songList ul {
-  padding: 0px 42px;
+  padding: 0px 12px;
 }
 
 .songList ul li {
@@ -209,12 +241,186 @@ body {
   border-radius: 5px;
 }
 
+.songList .info {
+  font-size: 13px;
+  width: 344px;
+}
+
+.hamburger {
+  display: none;
+  cursor: pointer;
+}
+
+.hamburgerContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 14px;
+}
+
 .playnow {
   display: flex;
 }
 
-.playnow span {
-  font-size: 10px
+.playnow .span {
+  font-size: 12px;
   padding: 12px;
   width: 64px;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.seekbar {
+  height: 4px;
+  width: 98%;
+  background: black;
+  border-radius: 10px;
+  position: absolute;
+  bottom: 4px;
+  margin: 6px;
+  cursor: pointer;
+}
+
+.circle {
+  width: 13px;
+  height: 13px;
+  border-radius: 13px;
+  background-color: black;
+  position: relative;
+  bottom: 5px;
+  left: 0%;
+  transition: left 0.5s;
+}
+
+.songbuttons img {
+  cursor: pointer;
+}
+
+.songtime {
+  width: 125px;
+  color: black;
+  padding: 0 12px;
+}
+
+
+.abovebar {
+  display: flex;
+  justify-content: space-between;
+  margin: 20px 0;
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .left {
+    position: absolute;
+    left: -130%;
+    transition: all .3s;
+    z-index: 1;
+    width: 373px;
+    background-color: black;
+    padding: 0;
+    height: 100vh;
+    position: fixed;
+    top: 0;
+  }
+
+  .songinfo,
+  .songtime {
+    width: auto;
+  }
+
+  .left .close {
+    position: absolute;
+    right: 31px;
+    top: 25px;
+    width: 29px;
+  }
+
+  .timevol {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+    flex-direction: column;
+    gap: 13px;
+  }
+
+  .right {
+    width: 100vw;
+  }
+
+  .playbar {
+    width: calc(100vw - 75px);
+  }
+
+  .seekbar {
+    width: calc(100vw - 120px);
+  }
+
+  .hamburger {
+    display: block;
+  }
+
+  .right {
+    margin: 0;
+  }
+
+  .card {
+    width: 55vw;
+  }
+
+  .cardContainer {
+    margin: 0;
+    justify-content: center;
+  }
+
+  .close {
+    display: block;
+  }
+
+  .abovebar {
+    flex-direction: column;
+    gap: 23px;
+    align-items: center;
+  }
+
+  .cardContainer {
+    max-height: unset;
+    overflow-y: unset;
+    margin-bottom: 35vh;
+  }
+
+  .playbar {
+    right: 25px;
+  }
+}
+
+@media (max-width: 500px) {
+  .card {
+    width: 100%;
+  }
+
+  .header>* {
+    padding: 2px;
+  }
+
+  .buttons>* {
+    margin: 0 6px;
+  }
+
+  .header {
+    padding: 7px;
+  }
+
+  .spotifyPlaylists h1 {
+    padding: 4px;
+  }
+
+  .library {
+    height: 85vh;
+  }
+
+  .left {
+    width: 100vw;
+  }
+
 }
